--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,45 @@
+h1 {
+    /* Color: La couleur du text */
+    color: rgb(0, 114, 213);
+    /* Text-align: alignement du texte */
+    text-align: center;
+    /* Background-color: couleur du fond */
+    background-color: rgb(119, 255, 0);
+    /* Padding: marge intérieure */
+    padding: 1em;
+    /* Text-decoration: ligne de décoration */
+    text-decoration: underline;
+}
+
+/* > Permet de sélectionner l'enfant dircet de l'élément #liste_cours */
+
+#liste_cours > li {
+    /* list-style: none permet la désactivation des puces */
+    list-style: none;
+    margin-block: 5px;
+    border: 1px solid #FF1D15;
+    width: fit-content;
+    padding: 3px;
+    border-radius: 5px;
+    background-color: #FFFC31;
+}
+
+#liste_cours > li > a {
+    text-decoration: none;
+    color: #3EC300;
+}
+
+#liste_cours > li:hover {
+    border: 1px solid #FF1D15;
+    background-color: #337CA0;
+
+}
+
+#liste_cours > li > a:hover {
+    color: #f941ff;
+}
+
+
 table, td, th {
     border: solid 1px black;
     border-collapse: collapse;
