--- a/css/exercice.css
+++ b/css/exercice.css
@@ -28,7 +28,7 @@
     counter-reset: section;
     display: flex;
     border: 1px dashed grey;
-    width: 50vw;
+    width: 100ù;
     height: 10vh;
     padding: 1rem;
     gap: .25rem;
@@ -76,4 +76,60 @@
 
 .wrap {
     flex-wrap: wrap;
+}
+
+.flex-col {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.main {
+    height: 100vh;
+    width: 100%;
+    /* background-color: pink; */
+}
+
+.block-h40 {
+    display: flex;
+    height: 40%;
+    width: 100%;
+    /* background-color: rgb(43, 255, 0); */
+    gap: 1rem;
+}
+
+.block-h60 {
+    display: flex;
+    height: 60%;
+    width: 100%;
+    /* background-color: rgb(0, 34, 255); */
+    gap: 1rem;
+}
+
+.block-w70 {
+    height: 100%;
+    width: 70%;
+    background-color: var(--yellow-color);
+}
+
+.block-w30 {
+    height: 100%;
+    width: 30%;
+    background-color: var(--orange-color);
+}
+
+
+.block-w50 {
+    height: 100%;
+    width: 50%;
+}
+
+.block-w50:first-of-type {
+    background-color: var(--orange-color);
+}
+
+.block-h50 {
+    height: 50%;
+    width: 100%;
+    background-color: var(--cyan-color);
 }
