--- a/css/exo_position_2.css
+++ b/css/exo_position_2.css
@@ -1,49 +1,97 @@
+:root {
+    --primary:#3498DB;
+    --card-padding: 2rem;
+    font-size: 30px;
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
 body {
-    background: rgb(200, 200, 200);
+    background: #F5F6FA;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Segoe UI', sans-serif;
+    text-align: center;
 }
 
 .card {
     background: white;
-    padding: 1rem;
+    filter: drop-shadow(0 0 1rem rgb(197, 197, 197));
+    padding: var(--card-padding);
     border-radius: 1rem;
-    width: 50%;
+    width: 45%;
     aspect-ratio: 1.25/1;
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 4rem;
 }
 
 .card a {
-    background: blue;
+    background: var(--primary);
     color: white;
     text-decoration: none;
     position: absolute;
-    right: 1rem;
+    top: .75rem;
+    right: .75rem;
+    font-size: 1rem;
+    padding: 0.5rem 1rem;
+    border-radius: .25rem;
+}
+
+.card h2 {
+    font-weight: 900;
+}
+
+.title {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
 }
 
 .round {
     border-radius: 50%;
+    aspect-ratio: 1/1;
     overflow: hidden;
-    width: fit-content;
-    border: 5px solid blue;
+    border: 5px solid var(--primary);
+}
+
+.circles {
+    position: relative;
+}
+
+.dot {
+    height: 1rem;
+    aspect-ratio: 1/1;
+    border-radius: 50%;
+    background-color: #2ECC71;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+.stats {
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .num {
-    font-size: 2rem;
-    font-weight: bold;
+    font-size: 1.5rem;
+    font-weight: 900;
+    text-align: center;
 }
 
 .stat, .sub {
     color: grey;
+}
+
+.sub {
+    font-size: .9rem;
 }
